methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:30: error: not found: value marque
  marque()
  ^PatternPicture:33: error: not found: value marque
  marque()
  ^